--- a/src/Footer.css
+++ b/src/Footer.css
@@ -37,9 +37,9 @@
   font-size: 20px;
 }
 
-form {
-  padding-left: 721px;
-}
+/* form {
+  padding-left: 0px;
+} */
 
 .footer-input {
   padding: 8px 20px;
